--- a/crm/.settings/org.eclipse.wst.common.component
+++ b/crm/.settings/org.eclipse.wst.common.component
@@ -1,24 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-            
-    
-    <wb-module deploy-name="crm-0.0.1">
-                        
         
-        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                        
-        
-        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                        
-        
-        <property name="java-output-path" value="/java16-crm-gv/build/classes"/>
+    <wb-module deploy-name="java16-crm-gv-0.0.1">
                 
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                
+        <property name="java-output-path" value="/java16-crm-gv/build/classes"/>
         <property name="context-root" value="crm"/>
-                    
-    
+            
     </wb-module>
-        
-
+    
 </project-modules>
